<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inviteFragment"
        android:icon="@drawable/ic_group"
        android:title="@string/title_invite" />

    <item
        android:id="@+id/notionFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notice" />

    <item
        android:id="@+id/findFragment"
        android:icon="@drawable/ic_map"
        android:title="@string/title_find" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_box"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/optionFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_option" />

</menu>