<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/findFragment">

    <fragment
        android:id="@+id/findFragment"
        android:name="com.example.ubi.home.find.FindFragment"
        android:label="@string/title_find"
        tools:layout="@layout/fragment_find" >
        <action
            android:id="@+id/action_findFragment_to_createFragment"
            app:destination="@id/createFragment" />
    </fragment>
    <fragment
        android:id="@+id/inviteFragment"
        android:name="com.example.ubi.home.invite.InviteFragment"
        android:label="@string/title_invite"
        tools:layout="@layout/fragment_invite" />
    <fragment
        android:id="@+id/notionFragment"
        android:name="com.example.ubi.home.notion.NotionFragment"
        android:label="@string/title_notice"
        tools:layout="@layout/fragment_notion" />
    <fragment
        android:id="@+id/optionFragment"
        android:name="com.example.ubi.home.OptionFragment"
        android:label="@string/title_option"
        tools:layout="@layout/fragment_option" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.ubi.home.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_findFriendFragment"
            app:destination="@id/findFriendFragment" />
    </fragment>
    <fragment
        android:id="@+id/createFragment"
        android:name="com.example.ubi.home.find.CreateFragment"
        android:label="fragment_create"
        tools:layout="@layout/fragment_create" >
        <action
            android:id="@+id/action_createFragment_to_findFragment"
            app:destination="@id/findFragment" />
    </fragment>
    <fragment
        android:id="@+id/findFriendFragment"
        android:name="com.example.ubi.home.profile.friend.FindFriendFragment"
        android:label="fragment_find_friend"
        tools:layout="@layout/fragment_find_friend" >
        <action
            android:id="@+id/action_findFriendFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_findFriendFragment_to_contactFragment2"
            app:destination="@id/contactFragment2" />
    </fragment>
    <fragment
        android:id="@+id/contactFragment2"
        android:name="com.example.ubi.login.contact.ContactFragment"
        android:label="fragment_contact"
        tools:layout="@layout/fragment_contact" >
        <action
            android:id="@+id/action_contactFragment2_to_findFriendFragment"
            app:destination="@id/findFriendFragment" />
    </fragment>
</navigation>